# deprecated_webapp-launcher

./: CMakeLists.txt  README.md
files/pkgconfig/: webapp-plugin.pc.in
files/sysbus/: com.palm.luna-apps.json.prv.in  com.palm.luna-apps.json.pub.in  org.webosports.webapp.json.prv.in
lib/: CMakeLists.txt  baseextension.cpp  baseextension.h  scriptexecutor.cpp  scriptexecutor.h  webappbaseplugin.cpp  webappbaseplugin.h
src/: CMakeLists.txt  activity.cpp  activity.h  applicationdescription.cpp  applicationdescription.h  main.cpp  resources.qrc  webapplauncher.cpp  webapplauncher.h  webapplication.cpp  webapplication.h  webapplicationwindow.cpp  webapplicationwindow.h
src/extensions/: PalmServiceBridge.js  PalmSystem.js  palmservicebridgeextension.cpp  palmservicebridgeextension.h  palmsystemextension.cpp  palmsystemextension.h  palmsystemplugin.cpp.autosave
src/plugins/: baseplugin.cpp  palmservicebridgeplugin.cpp  palmservicebridgeplugin.h  palmsystemplugin.h
src/qml/: ApplicationContainer.qml  LoadingBackground.qml  Window.qml  extensionmanager.js  webos-api.js
